--- a/WcfServiceVolumenCalc/WcfServiceVolumenCalc.csproj
+++ b/WcfServiceVolumenCalc/WcfServiceVolumenCalc.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service1.svc" />
+    <Content Include="SQL\Create dbo.Table.sql" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
